fix style issues

--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -16,6 +16,7 @@
     font-weight: normal;
     color: $N200;
     cursor: pointer;
+    @include moreText();
   }
   .show{
     display: inline-block;
