--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -16,6 +16,7 @@ $card-width: 264px;
 
 $page-bottom: 48px;
 $main-height: calc(100vh);
+$main-min-height: 650px;
 
 // card
 $app-card-width: 264px;
