--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,5 @@
 @import "./partial/color";
+@import "./partial/text";
 
 @mixin calc-section-size($size: 1) {
   .section-size-#{$size} {
@@ -23,4 +24,27 @@
   //&:hover {
   //  box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
   //}
+}
+
+@mixin moreText {
+  font-family: Roboto;
+  font-size: $size-normal;
+  color: $N200;
+  &:hover {
+    color: $P65;
+  }
+  &:active {
+    color: $P100;
+  }
+  &:visited {
+    color: $P45;
+  }
+}
+
+@mixin idText {
+  font-family: RobotoMono-Regular;
+  line-height: 14px;
+  font-size: 12px;
+  color: $N75;
+  letter-spacing: 0;
 }
