--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -23,6 +23,8 @@
        height: 48px;
        margin-bottom: 12px;
        border-radius: 2px;
+       line-height: 48px;
+       text-align: center;
        img{
          max-width: 100%;
          max-height: 100%;
@@ -67,6 +69,7 @@
       float: left;
       width: 36px;
       height: 36px;
+      line-height: 36px;
     }
     .name {
       margin-left: 48px;
