--- a/src/components/Statistics/Progress/index.scss
+++ b/src/components/Statistics/Progress/index.scss
@@ -3,7 +3,7 @@
 .progress{
   display: inline-block;
   position: relative;
-  bottom: 3px;
+  bottom: -5px;
   width: 200px;
   height: 8px;
   background-color: $P10;
@@ -35,37 +35,35 @@
   }
   .tips{
     position: relative;
-    bottom: 58px;
+    bottom: 56px;
     display: none;
     min-width: 110px;
     height: 50px;
     padding: 8px 12px 10px;
     border-radius: 2px;
-    background-color: #301255;
-    box-shadow: 0 2px 4px 0 rgba(48, 14, 86, 0.32);
+    background-color: $N500;
+    box-shadow: 0 2px 4px 0 rgba(71, 78, 93, 0.2);
     .arrow{
       position: absolute;
-      bottom: -6px;
+      bottom: -3px;
       left: 10px;
-      border-top: 6px solid #301255;
-      border-left: 4px solid transparent;
-      border-right: 4px solid transparent;
+      border-top: 4px solid $N500;
+      border-left: 3px solid transparent;
+      border-right: 3px solid transparent;
     }
     .number{
       margin-bottom: 4px;
       line-height: 14px;
       font-size: 12px;
       font-weight: 500;
-      color: #ffffff;
+      color: $N0;
     }
     .name{
       max-width: 90px;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap ;
       line-height: 14px;
       font-size: 12px;
-      color: #bfb3cd;
+      color: $N65;
+      @include textCut;
     }
   }
 }
