--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -15,6 +15,8 @@
     width: 24px;
     height: 24px;
     border-radius: 2px;
+    line-height: 24px;
+    text-align: center;
     img{
       max-width: 100%;
       max-height: 100%;
@@ -65,7 +67,7 @@
 .repoName {
   float: left;
   width: 100px;
-  line-height: 16px;
+  line-height: 20px;
   @include textCut;
   color: $N300;
   :global{
