fix loading, common page style issues

--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -16,7 +16,7 @@
   .title{
     padding-left: 36px;
     padding-bottom: 24px;
-    border-bottom: 1px solid $border-lighter;
+    border-bottom: 1px solid $N10;
     .name{
       margin-bottom: 8px;
       font-size: 24px;
