--- a/src/components/VersionList/index.scss
+++ b/src/components/VersionList/index.scss
@@ -6,7 +6,7 @@
     height: 64px;
     padding: 14px 8px;
     color: $purple-word;
-    border-bottom: 1px solid $border-lighter;
+    border-bottom: 1px solid $N10;
     font-size: 14px;
   }
   .column{
