--- a/src/pages/Admin/Overview/ClusterList/index.scss
+++ b/src/pages/Admin/Overview/ClusterList/index.scss
@@ -27,7 +27,7 @@
     box-sizing: border-box;
     padding: 9px 0;
     height: 60px;
-    border-bottom: 1px solid $border-gray-li;
+    border-bottom: 1px solid $N10;
     &:hover{
       background-color: $li-hover-bg;
       .name{
