--- a/src/pages/Admin/Overview/AppList/index.scss
+++ b/src/pages/Admin/Overview/AppList/index.scss
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     padding: 12px 18px 13px 16px;
     height: 60px;
-    border-bottom: 1px solid $border-gray-li;
+    border-bottom: 1px solid $N10;
     &:hover{
       background-color: $li-hover-bg;
       [class*="tdName"] a{
