--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -5,10 +5,11 @@
 }
 .content {
   position: relative;
-  height: $main-height;
+  height: auto;
   min-height: $main-min-height;
   margin: 0 auto;
   width: $content-width;
+
   .homeLoad {
     margin-left: $nav-width;
   }
