--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -46,6 +46,7 @@
     width: 100%;
     min-width: $content-width;
     min-height: $main-height;
+    height: auto;
     margin: 0 auto;
   }
   .id {
