fix popover menu position, toolbar style

--- a/src/components/Base/Popover/index.scss
+++ b/src/components/Base/Popover/index.scss
@@ -49,6 +49,7 @@
       }
       &[data-placement^="bottom"] {
         margin-top: 8px;
+        margin-left: -60px;
 
         .pi-popover-popper_arrow {
           top: -15px;
