--- a/src/components/Toolbar/index.scss
+++ b/src/components/Toolbar/index.scss
@@ -4,9 +4,10 @@
 
 .toolbar {
   padding: 8px 0 24px;
+  margin: 0 0 12px 0;
 
   button {
-    margin-right: 12px;
+    margin-left: 12px;
   }
 
   .search {
