--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -41,7 +41,8 @@ $profile-hover-color: #efe6f8;
       border-radius: 16px;
       border: 1px solid transparent;
       background-color: rgba($N0, 0.1);
-      transition: color .5s ease-in;
+      //transition: color .5s ease-in;
+      transition: all .3s ease-in-out;
 
       &::placeholder {
         font-size: 14px;
