- fix filter runttimes by label and provider

--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -33,7 +33,7 @@
   }
   .name{
     display: inline-block;
-    float: left;
+    //float: left;
     margin-right: 24px;
     width: 168px;
     font-size: 14px;
