--- a/src/pages/Admin/Apps/Detail/index.scss
+++ b/src/pages/Admin/Apps/Detail/index.scss
@@ -17,7 +17,7 @@
     width: 400px;
     height: 72px;
     border-radius: 2px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid $N30;
     outline: none;
     resize: none;
     &:focus{
