--- a/src/pages/Admin/Categories/Detail/index.scss
+++ b/src/pages/Admin/Categories/Detail/index.scss
@@ -16,11 +16,11 @@
     width: 400px;
     height: 100px;
     border-radius: 2px;
-    border: 1px solid #e7e7e7;
+    border: 1px solid $N30;
     outline: none;
     resize: none;
     &:focus{
-      border: 1px solid $border-dark;
+      border: 1px solid $P75;
     }
   }
   .textareaName{
