--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -95,7 +95,7 @@ $background-color-lighter: #ffffff;
 $th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
 $li-hover-bg: rgba(213, 218, 229, 0.15);
-$link-hover: #7a2ac0;
+$link-hover: $P75;
 $tr-hover-bg: rgba(213, 218, 229, 0.15);
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
