--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -43,7 +43,6 @@
         top: 8px;
         bottom: 8px;
         width: 0;
-        /*border-right: 1px solid $border-light;*/
       }
 
       label {
@@ -85,7 +84,7 @@
     &-tbody > tr > td {
       padding: 12px 0 12px 12px;
       line-height: 16px;
-      border-bottom: 1px solid $border-lighter;
+      border-bottom: 1px solid $N10;
       transition: all $transition-speed;
       word-wrap:break-word;
       a{
