--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -1,7 +1,6 @@
 @import '~scss/vars';
 
 .detailCard {
-
   .icon{
     float: left;
     display: inline-block;
@@ -14,14 +13,15 @@
     }
   }
   .title{
-    padding-left: 36px;
+    margin-bottom: 20px;
+    padding-left: 28px;
     padding-bottom: 24px;
     border-bottom: 1px solid $N10;
     .name{
-      margin-bottom: 8px;
-      font-size: 24px;
+      margin-bottom: 4px;
+      line-height: 24px;
+      font-size : 20px;
       font-weight: 500;
-      line-height: 1.17;
       color: $N500;
       max-width: 270px;
       @include textCut;
@@ -56,15 +56,18 @@
     padding-left: 0;
   }
   .detail{
-    margin-top: 24px;
+    margin-top: 32px;
     li{
-      min-height: 30px;
+      margin-bottom: 8px;
       font-size: 14px;
-      line-height: 1.71;
-      letter-spacing: 0;
+      line-height: 24px;
+      vertical-align: middle;
       color: $N300;
       list-style: none;
       @include textCut;
+      &:last-child{
+        margin-bottom: 0;
+      }
       a{
         color: $text-color;
       }
@@ -81,7 +84,7 @@
       width: 120px;
       margin-right: 24px;
       font-size: 14px;
-      line-height: 1.71;
+      line-height: 24px;
       color: $N75;
       text-align: right;
     }
@@ -94,9 +97,8 @@
 .copyOuter{
   position: relative;
   display: inline-block;
-  margin-bottom: 10px;
+  //margin-bottom: 10px;
   @include idText;
-
   :global{
     .copyId{
       display: none;
