--- a/src/pages/Admin/Apps/Installed/index.scss
+++ b/src/pages/Admin/Apps/Installed/index.scss
@@ -22,7 +22,7 @@
     div {
       box-shadow: none !important;
     }
-  }  
+  }
 }
 
 .search {
@@ -52,7 +52,7 @@
     display: table;
     width: 100%;
     padding: 7px 0;
-    border-top: 1px solid $border-lighter;
+    border-top: 1px solid $N10;
 
     .icon {
       float: left;
