--- a/src/pages/Admin/Users/GroupCard/index.scss
+++ b/src/pages/Admin/Users/GroupCard/index.scss
@@ -6,12 +6,11 @@
     width: 310px;
     padding: 20px;
     border-radius: 3px;
-    border: 1px solid #f6f6f8;
-    background-color: #f6f6f8;
+    border: 1px solid $N10;
+    background-color: $N0;
     cursor: pointer;
     &.current, &:hover{
-      background-color: #efe9f7;
-      border: 1px solid #7749ac;
+      border: 1px solid $P75;
     }
     &.current:hover{
       cursor: default;
