--- a/src/pages/AppDetail/Body/QingCloud/index.scss
+++ b/src/pages/AppDetail/Body/QingCloud/index.scss
@@ -37,7 +37,7 @@
     }
     .active{
       width: 44px;
-      background-color: $link-hover;
+      background-color: $P75;
     }
   }
   .listOuter{
