--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -66,7 +66,7 @@
             border-right-color: $tr-hover-bg;
           }
         }
-        td a, td [class*="tdName"] a{
+        td a, td [class*='tdName'] a, td > a > [class*='repoName']{
           color: $link-hover;
         }
         td [class*="popper"] a{
