--- a/src/pages/AppDetail/Meta/index.scss
+++ b/src/pages/AppDetail/Meta/index.scss
@@ -8,11 +8,12 @@
     float: left;
     width: 48px;
     height: 48px;
+    line-height: 48px;
     margin-right: 16px;
     border-radius: 2px;
     img{
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
 
