--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -68,12 +68,17 @@
   float: left;
   width: 100px;
   line-height: 20px;
+  vertical-align: middle;
   @include textCut;
   color: $N300;
+  &:hover {
+    color: $P75;
+  }
+
   :global{
     .icon {
       float: left;
-      margin-right: 2px;
+      margin-right: 4px;
     }
   }
 }
