--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -96,7 +96,7 @@ $th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
 $li-hover-bg: rgba(213, 218, 229, 0.15);
 $link-hover: #7a2ac0;
-$tr-hover-bg: rgba(213, 218, 229, 0.15);
+$tr-hover-bg: $background-color;
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
 
