--- a/src/components/Base/Pagination/index.scss
+++ b/src/components/Base/Pagination/index.scss
@@ -1,138 +1,51 @@
-@import '~scss/vars';
+@import "~scss/vars";
 
 .pagination {
-  &:after {
-    content: " ";
-    display: block;
-    height: 0;
-    clear: both;
-    overflow: hidden;
-    visibility: hidden;
+  font-family: Roboto;
+  height: 28px;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: normal;
+  color: $N75;
+  margin-top: 18px;
+
+  .total {
+    float: left;
+    .cancelBtn {
+      display: inline-block;
+      cursor: pointer;
+      margin-left: 12px;
+      color: $P75;
+    }
   }
-}
+  .current {
+    width: 29px;
+    height: 21px;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: $N500;
+    margin: 0 8px;
+  }
+  .pageItems {
+    float: right;
 
-:global {
-  .pi-pagination {
-    margin: 16px -6px 0;
-    padding: 0;
-    list-style: none;
-
-    &-item {
-      float: left;
-      width: 24px;
-      height: 24px;
-      line-height: 24px;
+    .btn {
+      display: inline-block;
+      cursor: pointer;
+      width: 40px;
+      height: 32px;
+      border-radius: 2px;
+      background-color: $N0;
+      border: solid 1px $N30;
       text-align: center;
-      border-radius: 50%;
-      cursor: pointer;
-      user-select: none;
-      outline: 0;
-
-      a {
-        display: block;
-        width: 100%;
-        height: 100%;
-        color: $second-text-color;
-        text-decoration: none;
-        transition: none;
+      &:hover {
+        box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
       }
 
-      &:focus, &:hover {
-        transition: all .3s;
-
-        a {
-          color: $primary;
-        }
-      }
-
-      &-active {
-        font-weight: 500;
-        background-color: $primary;
-
-        a {
-          color: #fff !important;
-        }
-
-        &:focus, &:hover {
-          a {
-            color: #fff;
-          }
-        }
-      }
-    }
-
-    &-prev, &-next {
-      float: left;
-      height: 24px;
-      line-height: 24px;
-      padding: 0 6px;
-      color: $second-text-color;
-      cursor: pointer;
-      user-select: none;
-      outline: 0;
-
-      &:hover, &:focus {
-        color: $primary;
-      }
-    }
-
-    &-jump-prev, &-jump-next {
-      position: relative;
-      float: left;
-      width: 24px;
-      height: 24px;
-      color: $N500;
-      cursor: pointer;
-      outline: 0;
-
-      &:after {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 5px;
-        content: "...";
-        letter-spacing: 2px;
-        text-align: center;
-      }
-
-      &:focus, &:hover {
-        color: $primary;
-      }
-    }
-
-    &-disabled {
-      &, &:hover, &:focus {
-        color: #999;
-        cursor: not-allowed;
-
-        .pi-pagination-item-link, a {
-          color: #999;
-          cursor: not-allowed;
-        }
-      }
-    }
-
-    &-total-text {
-      float: right;
-      padding: 0 6px;
-      line-height: 24px;
-      color: $N500;
-    }
-
-    &-options {
-      float: left;
-      margin-left: 15px;
-      color: $second-text-color;
-
-      &-quick-jumper {
-        display: inline-block;
-        vertical-align: top;
-        height: 24px;
-        line-height: 24px;
-
-        input {
-          margin: 0 8px;
-          width: 50px;
+      :global {
+        .icon {
+          position: relative;
+          top: 4px;
         }
       }
     }
