--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -97,16 +97,30 @@
 
   table {
     .row-selected {
-      background: rgba(213, 218, 229, 0.15);
+      background: $tr-hover-bg;
     }
   }
 
   button {
     font-weight: 500;
   }
+  .btn-disabled {
+    cursor: not-allowed !important;
+  }
+  .btn-handle {
+    margin-left: 0 !important;
+  }
 
   .pi-table-thead > tr > th {
     line-height: 18px !important;
     padding: 10px 12px !important;
   }
+
+  .actions {
+    margin-left: 12px;
+    .pi-popover-popper {
+      margin-left: -81px !important;
+    }
+  }
+
 }
