update app detail, move version panel to right fix tagNav component

--- a/src/pages/Admin/Apps/Detail/index.scss
+++ b/src/pages/Admin/Apps/Detail/index.scss
@@ -31,7 +31,6 @@
 }
 
 .versionCard {
-
   .title{
     //line-height: 36px;
     font-size: 16px;
@@ -45,4 +44,8 @@
       cursor: pointer;
     }
   }
+}
+
+.tabCard {
+  padding: 24px;
 }
