--- a/src/components/Base/Radio/index.scss
+++ b/src/components/Base/Radio/index.scss
@@ -2,8 +2,11 @@
 
 .group {
   display: inline-block;
+  line-height: 16px;
+  vertical-align: middle;
   .radio {
-    margin-right: 23px;
+    margin-right: 24px;
+    margin-bottom: 0;
   }
 
   .radioButton {
@@ -13,22 +16,52 @@
 
 .radio {
   .circle {
+    float: left;
     display: inline-block;
-    width: 12px;
-    height: 12px;
-    background-color: #ffffff;
+    box-sizing: border-box;
+    margin-top: 1px;
+    width: 14px;
+    height: 14px;
+    background-color: $N0;
     border: solid 1px $N30;
     border-radius: 50%;
-    box-sizing: border-box;
   }
   .text {
-    margin-left: 6px;
+    float: left;
+    margin-left: 4px;
     line-height: 16px;
-    color: $text-color;
+    color: $N300;
+  }
+  &:hover{
+    .circle {
+      background-color: $N10;
+      border-color: $N30;
+    }
+  }
+  &:active{
+    .circle {
+      border-color: $P100 !important;
+    }
   }
   &.checked {
     .circle {
-      border: solid 4px $P100;
+      border: solid 4px $P75;
+    }
+    &:hover{
+      .circle {
+        border-color: $P65;
+      }
+    }
+    &:active{
+      .circle {
+        border-color: $P100 !important;
+      }
+    }
+  }
+  &.disabled {
+    .circle {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 }
