--- a/src/components/Layout/CreateResource/index.scss
+++ b/src/components/Layout/CreateResource/index.scss
@@ -6,13 +6,14 @@
 
   .main {
     .card {
-      padding: 32px;
+      padding: 32px 32px 0 32px;
     }
 
     .title{
       padding: 20px 32px;
       line-height: 24px;
       font-size: 20px;
+      font-weight: 500;
       color: $N500;
       border-bottom: 1px solid $N10;
     }
