--- a/src/pages/Admin/Overview/ClusterList/index.scss
+++ b/src/pages/Admin/Overview/ClusterList/index.scss
@@ -25,7 +25,7 @@
   }
   li{
     box-sizing: border-box;
-    padding: 9px 0;
+    padding: 12px 12px 10px 12px;
     height: 60px;
     border-bottom: 1px solid $N10;
     &:hover{
@@ -37,7 +37,7 @@
   }
   .dot{
     float:left;
-    margin: 12px;
+    margin: 8px 12px 0 0;
     width: 12px;
     height: 12px;
   }
@@ -69,17 +69,10 @@
     }
     .time{
       font-size: 12px;
-      line-height: 1.67;
-      letter-spacing: 0;
+      line-height: 20px;
       text-align: right;
       color: $N100;
     }
-  }
-
-}
-.normalList{
-  li{
-    margin-bottom: 8px;
   }
 }
 
