--- a/src/components/Rectangle/AppImages/index.scss
+++ b/src/components/Rectangle/AppImages/index.scss
@@ -14,8 +14,9 @@
       width: 24px;
       height: 24px;
       border-radius: 50%;
-      background-color: $tr-hover-bg;
-      border: 1px solid $tr-hover-bg;
+      background-color: $N0;
+      border: 1px solid #8454cd;
+
       &:hover{
         border-radius: 50%;
         transform: scale(1.3);
