--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -96,3 +96,27 @@
     }
   }
 }
+
+.aside {
+  .appIntro {
+    margin-bottom: 16px;
+
+    .icon {
+      float: left;
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      object-fit: contain;
+      border-radius: 3px;
+      img{
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .name {
+      margin-left: 12px;
+      height: 24px;
+      @include H5RobotoLeftBlack;
+    }
+  }
+}
