--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,7 +28,7 @@
 
 @mixin moreText {
   font-family: Roboto;
-  font-size: $size-normal;
+  font-size: $size-small;
   color: $N200;
   &:hover {
     color: $P65;
