--- a/src/components/Rectangle/AppImages/index.scss
+++ b/src/components/Rectangle/AppImages/index.scss
@@ -7,7 +7,7 @@
     color: $grey-word;
   }
   .images{
-    img{
+    .image{
       display: inline-block;
       float: left;
       margin-right: -8px;
@@ -21,7 +21,13 @@
         border-radius: 50%;
         transform: scale(1.3);
       }
+      img{
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 50%;
+      }
     }
+
     :global{
       .icon{
         float: left;
