- fix table cloumn and operation styles

--- a/src/components/Base/Popover/index.scss
+++ b/src/components/Base/Popover/index.scss
@@ -121,6 +121,7 @@
       }
       li,a,span {
         display: block;
+        min-width: 150px;
         padding: 4px 12px;
         height: 32px;
         font-size: 14px;
