--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -41,6 +41,10 @@
     color: $N500;
     text-align: right;
   }
+  .selectName{
+    float: left;
+    line-height: 32px;
+  }
   .showWord{
     display: inline-block;
     max-width: 420px;
