--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -6,10 +6,12 @@
     display: inline-block;
     width: 24px;
     height: 24px;
+    line-height: 24px;
+    vertical-align: middle;
     border-radius: 2px;
     img{
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .title{
@@ -23,7 +25,7 @@
       font-size : 20px;
       font-weight: 500;
       color: $N500;
-      max-width: 270px;
+      max-width: 230px;
       @include textCut;
     }
     .id, .caId{
@@ -68,7 +70,11 @@
       &:last-child{
         margin-bottom: 0;
       }
+      a{
+        color: $N300;
+      }
       a:hover{
+        color: $P75;
         [class*='repoName']{
           color: $P75;
         }
@@ -91,9 +97,6 @@
     .labels{
       margin-top: 0px;
       margin-left: 144px;
-    }
-    .repoName{
-      width: 150px;
     }
   }
 }
