--- a/src/pages/Admin/Overview/Panel/index.scss
+++ b/src/pages/Admin/Overview/Panel/index.scss
@@ -22,7 +22,7 @@
     }
   }
   :global{
-    .pi-table-thead, .pi-pagination{
+    .pi-table-thead, .pi-pagination,[class*='_pagination']{
       display: none;
     }
   }
