--- a/src/components/TagNav/index.scss
+++ b/src/components/TagNav/index.scss
@@ -4,7 +4,7 @@
   //margin: -16px -24px 24px;
 
   padding: 0 24px;
-  height: 48px;
+  height: 47px;
   background: $N0;
   border-bottom: 1px solid $N10;
 
@@ -15,10 +15,10 @@
     line-height: 16px;
     font-size: 14px;
     font-weight: 500;
-    color: $text-color;
+    color: $N300;
     cursor: pointer;
     &.active {
-      color: $third-text-color;
+      color: $P75;
       border-bottom: 1px solid $P75;
     }
   }
