--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -38,14 +38,20 @@ $input-item-height: 48px;
   border-radius: 8px;
   background-color: $login-form-bg;
   box-shadow: $login-form-shadow;
-  .errorAlert{
+
+  .notify{
     position: absolute;
     top: -20px;
     left: 50%;
     transform: translate(-50%,0);
-    width: 240px;
     text-align: left;
+
+    .notifyItem {
+      width: 240px;
+      min-width: 240px;
+    }
   }
+
   h1 {
     margin-bottom: 24px;
     color: $title-color;
@@ -147,3 +153,4 @@ $input-item-height: 48px;
     font-weight: 500;
   }
 }
+
