fix appdetail screenshots is null bug

--- a/src/pages/Admin/Categories/index.scss
+++ b/src/pages/Admin/Categories/index.scss
@@ -30,7 +30,7 @@
     font-size: 14px;
     font-weight: 500;
     color: $P75;
-    background: #f9fafb;
+    background: $background-color;
   }
 }
 
