fix tdname component copy id failed

--- a/src/pages/Admin/Repos/Add/index.scss
+++ b/src/pages/Admin/Repos/Add/index.scss
@@ -67,6 +67,7 @@ form.createForm {
   .smallSelect{
     width: 88px;
     margin-right: 12px;
+    vertical-align: middle;
   }
   .textareaItem{
     height: 88px;
