-fix Tooltip Component style, remove userStore in overview

--- a/src/components/Base/Tooltip/index.scss
+++ b/src/components/Base/Tooltip/index.scss
@@ -4,8 +4,8 @@ $bgcolor: $text-color;
 
 .tooltip {
   .active {
-    box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
-    border: solid 1px $N30;
+    /*box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
+    border: solid 1px $N30;*/
   }
 }
 
