Change: remove bootstrap, fontawesome to reduce page initial load
- remove pifont, assets demo pictures
- fix tooltip style, modify category modal select

--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -33,7 +33,7 @@
 
   .body {
     padding: 20px 32px 30px;
-    //overflow-y: auto;
+    overflow-y: auto;
     :global{
       .formContent{
         margin: 12px 0 -18px;
