--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   z-index: 99;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: transparent;
 
   .loadOuter{
     position: absolute;
