--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -158,7 +158,7 @@ $profile-hover-color: #efe6f8;
         display: block;
         height: 32px;
         padding: 0 12px;
-        width: 100%;
+        //width: 100%;
         line-height: 32px;
         font-size: $font14;
         font-weight: normal;
