--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -1,6 +1,6 @@
 @import '~scss/vars';
 
-form.createForm {
+.createForm {
   display: block;
   //padding: 36px 0 0 36px;
 
@@ -119,6 +119,12 @@ form.createForm {
     font-size:12px;
     color: $N100;
     margin-left: 192px;
+  }
+
+  .radioGroup {
+    label {
+      float: left;
+    }
   }
 }
 
