--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -42,16 +42,17 @@
       line-height: 17px;
       font-size: 12px;
       color: $N300;
-      word-break: break-word;
+      word-break: break-all;
       word-wrap: break-word;
     }
     .preview{
       line-height: 17px;
       font-size: 14px;
-      color: $title-color;
-      a,a:active{
-        color: $title-color;
-      }
+      color: $preview-title;
+      margin-top: 10px;
+      //a, a:active{
+      //  color: $preview-title;
+      //}
     }
   }
   .noImg{
