--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -81,6 +81,7 @@ $sub-nav-color: #160029;
 $id-color: #127db3;
 $link-color: #6c2db5;
 $title-color: $N500;
+$preview-title: #300e56;
 $text-color: #333333;
 $second-text-color: #666666;
 $third-text-color: #7749ac;
